--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -873,7 +873,9 @@
 
         for(var i = 0; i < values.length; i++)
         {
-            local_labels_date.push(json_ex.values[i].created);
+            var date = new Date(json_ex.values[i].created).toUTCString()
+            date = date.split(' ').slice(1, 4).join(' ')
+            local_labels_date.push(date);
         }
 
         chart.data.labels = local_labels_date;
