#152 some test for minutes
to add minutes does not make sense because of timezones, just today should be fine, maybe add the time to the date at the title

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -690,9 +690,12 @@
         let current_date = new Date();
         let full_date = new Date(date); 
         date = full_date.toUTCString().split(' ').slice(0, 4).join(' ');
+
+        var minutes = (current_date - full_date) / 1000;
         var dif = parseInt((current_date - full_date) / (1000 * 60 * 60 * 24), 10); 
 
-        console.log(dif)
+        //console.log(minutes + " | " + dif + " | " + current_date + " | " + full_date);
+        console.log((full_date) + " | " + (current_date));
 
         if(dif == 0)
             dif = "today";
